--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -1,4 +1,7 @@
-<%= link_to 'Home', home_index_path %>
-<%= link_to 'Institutions', institutions_path %>
-<%= link_to 'Courses', courses_path %>
-<%= link_to 'Disciplines', disciplines_path %>
+<ul>
+  <li> <%= link_to 'Home', home_index_path %> </li>
+  <li> <%= link_to 'Institutions', institutions_path %> </li>
+  <li> <%= link_to 'Courses', courses_path %> </li>
+  <li> <%= link_to 'Disciplines', disciplines_path %> </li>
+  <li> <%= link_to 'Groups', groups_path %> </li>
+</ul>
