--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -4,4 +4,5 @@
   <li> <%= link_to 'Courses', courses_path %> </li>
   <li> <%= link_to 'Disciplines', disciplines_path %> </li>
   <li> <%= link_to 'Groups', groups_path %> </li>
+  <li> <%= link_to 'Users', users_path %> </li>
 </ul>
