--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -5,4 +5,6 @@
   <li> <%= link_to 'Disciplines', disciplines_path %> </li>
   <li> <%= link_to 'Groups', groups_path %> </li>
   <li> <%= link_to 'Users', users_path %> </li>
+
+  <li> <%= link_to 'Log out', destroy_user_session_path, method: :delete %> </li>
 </ul>
