--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,15 +5,21 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= stylesheet_link_tag 'custom/materialize.min.css' %>
+    <%= stylesheet_link_tag 'custom/template.css' %>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
     <%= javascript_include_tag 'application' %>
   </head>
 
   <body>
+    <%= render 'layouts/logout_header' %>
     <%= render 'layouts/menu_bar' %>
-    </br>
-    </br>
 
-    <%= yield %>
+  	<main class="container custom-container">
+      <%= yield %>
+    </main>
   </body>
 </html>
