Update menu links

--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -7,8 +7,8 @@
   <li class="nav-item z-depth-1 right <%= active_tab_class('home') %>">
     <%= link_to 'Home', home_index_path, class: 'white-text' %>
   </li>
-  <li class="nav-item z-depth-1 right <%= active_tab_class('users') %>">
-    <%= link_to 'Admins', users_path, class: 'white-text' %>
+  <li class="nav-item z-depth-1 right <%= active_tab_class('admins') %>">
+    <%= link_to 'Admins', admins_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('institutions') %>">
     <%= link_to 'Institutions', institutions_path, class: 'white-text' %>
@@ -22,7 +22,7 @@
   <li class="nav-item z-depth-1 right <%= active_tab_class('groups') %>">
     <%= link_to 'Groups', groups_path, class: 'white-text' %>
   </li>
-  <li class="nav-item z-depth-1 right <%= active_tab_class('users') %>">
-    <%= link_to 'Users', users_path, class: 'white-text' %>
+  <li class="nav-item z-depth-1 right <%= active_tab_class('students') %>">
+    <%= link_to 'Users', students_path, class: 'white-text' %>
   </li>
 </ul>
