Add columns to groups index

--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -1,4 +1,4 @@
-<ul id="slide-out" class="sidenav sidenav-fixed blue accent-2 white-text">
+<ul id="slide-out" class="sidenav sidenav-fixed blue theme white-text">
   <li>
     <div class="user-view center">
       <h2>LOGO</h2>
