--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -18,6 +18,7 @@
       <th>Course</th>
       <th>Discipline</th>
       <th>Name</th>
+      <th>Subsctiptions</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,13 +26,22 @@
   <tbody>
     <% @groups.each do |group| %>
       <tr>
-        <td><%= group.institution %></td>
-        <td><%= group.course %></td>
-        <td><%= group.discipline %></td>
+        <td><%= group.institution.try(:name) %></td>
+        <td><%= group.course.try(:name) %></td>
+        <td><%= group.discipline.try(:name) %></td>
         <td><%= group.name %></td>
+        <td><%= group.subscriptions.count %></td>
         <td><%= link_to 'Show', group %></td>
-        <td><%= link_to 'Edit', edit_group_path(group) %></td>
-        <td><%= link_to 'Destroy', group, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to edit_group_path(group) do %>
+            <i class="material-icons blue-text accent-2">edit</i>
+          <% end %>
+        </td>
+        <td>
+          <%= link_to group, method: :delete, data: { confirm: 'Are you sure?' } do %>
+            <i class="material-icons blue-text accent-2">delete</i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
