--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,6 +15,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Subsctiptions</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
     <% @courses.each do |course| %>
       <tr>
         <td><%= course.name %></td>
+        <td><i class="material-icons tiny">person</i> <%= course.subscriptions.size %> </span></td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
         <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
