--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -15,6 +15,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Subsctiptions</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
     <% @disciplines.each do |discipline| %>
       <tr>
         <td><%= discipline.name %></td>
+        <td><i class="material-icons tiny">person</i> <%= discipline.subscriptions.size %> </span></td>
         <td><%= link_to 'Show', discipline %></td>
         <td><%= link_to 'Edit', edit_discipline_path(discipline) %></td>
         <td><%= link_to 'Destroy', discipline, method: :delete, data: { confirm: 'Are you sure?' } %></td>
