--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -15,6 +15,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th>Email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,6 +24,7 @@
     <% @admins.each do |admin| %>
       <tr>
         <td><%= admin.name %></td>
+        <td><%= admin.email %></td>
         <td><%= link_to 'Show', admin %></td>
         <td><%= link_to 'Edit', edit_admin_path(admin) %></td>
         <td><%= link_to 'Destroy', admin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
