--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,38 +1,68 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Courses</h1>
 
-<%= form_tag courses_path, method: :GET do %>
-  <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-    <div class="field">
-      <%= f.label :search %>
-      <%= f.text_field :name %>
-    </div>
-  <% end %>
-<% end %>
+<div class="row title left">
+			<div class="col s12">
+				Cursos
+			</div>
+		</div>
+		<div class="row description left">
+			<div class="col s12">
+				Administre todos os cursos cadastrados
+			</div>
+		</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Subsctiptions</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<div class="row center">
+					<div class="col s12"><img class="responsive-img custom-image" src="assets/undraw_deliveries_131a@3x.png"></div>
+				</div>
+			</div>
+		</div>
+    <div class="container">
+			<div class="row">
+				<div class="col s1"></div>
+				  	<%= form_tag courses_path, method: :GET do %>
+						<%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+						<div class="input-field col s10 search-field">
+							<i class="material-icons prefix blue-text lighten-2">search</i>
+							<%= f.text_field :name %>
+							<label>Informe o nome ou parte dele</label>
+						</div>
+						<% end %>
+          			<% end %>
+				<div class="col s1"></div>
+			</div>
+		</div>
+		<table class="z-depth-1 round-corners highlight">
+			<thead>
+				<tr class="description">
+					<th>Nome</th>
+					<th class="center">Ação</th>
+				</tr>
+			</thead>
+			<tbody>
+			  <% @courses.each do |course| %>
+            <tr>
+            	<td><%= course.name %></td>
+              <td class="center">
+                <%= link_to course, method: :delete, data: { target: 'confirm-modal' } do %>
+                  <i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
+                <% end %>           
+            </tr>
+        <% end %>			
+			</tbody>
+		</table>
+		  <%= paginate @courses %>
+	</main>
+	
+	<div id="confirm-modal" class="modal center valign-wrapper custom-modal">
+		<div class="modal-content">
+			<p>Excluir o curso selecionado?</p>
+		</div>
+		<div class="modal-footer">
+			<a href="#!" class="modal-close waves-effect waves-green btn-flat">Sim</a>
+			<a class="modal-close waves-effect waves-red btn-flat">Não</a>
+		</div>
+	</div>
 
-  <tbody>
-    <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.name %></td>
-        <td><i class="material-icons tiny">person</i> <%= course.subscriptions.size %> </span></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= paginate @courses %>
-
-<%= link_to 'New Course', new_course_path %>
