migrate group layout

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,52 +1,70 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Groups</h1>
+<div class="row title left">
+	
+		<div class="col s12">
+				Grupos
+			</div>
+		</div>
+		<div class="row description left">
+			<div class="col s12">
+				Administre todos os grupos
+			</div>
+		</div>
 
-<%= form_tag groups_path, method: :GET do %>
-  <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-    <div class="field">
-      <%= f.label :search %>
-      <%= f.text_field :name %>
-    </div>
-  <% end %>
-<% end %>
+		<div class="section no-pad-bot" id="index-banner">
+			<div class="container">
+				<div class="row center">
+					<div class="col s12">
+            <%=image_tag 'undraw_community_8nwl@3x', class: 'responsive-img custom-image' %>
+          </div>
+				</div>
+			</div>
+		</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Institution</th>
-      <th>Course</th>
-      <th>Discipline</th>
-      <th>Name</th>
-      <th>Subsctiptions</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @groups.each do |group| %>
-      <tr>
-        <td><%= group.institution.try(:name) %></td>
-        <td><%= group.course.try(:name) %></td>
-        <td><%= group.discipline.try(:name) %></td>
-        <td><%= group.name %></td>
-        <td><i class="material-icons tiny">person</i> <%= group.subscriptions.size %> </span></td>
-        <td><%= link_to 'Show', group %></td>
-        <td>
-          <%= link_to edit_group_path(group) do %>
-            <i class="material-icons">edit</i>
-          <% end %>
-        </td>
-        <td>
-          <%= link_to group, method: :delete, data: { confirm: 'Are you sure?' } do %>
-            <i class="material-icons">delete</i>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<%= paginate @groups %>
-
-<%= link_to 'New Group', new_group_path %>
+   		<div class="container">
+			<div class="row">
+				<div class="col s1"></div>
+				  	<%= form_tag groups_path, method: :GET do %>
+						<%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+						<div class="input-field col s10 search-field">
+							<i class="material-icons prefix blue-text lighten-2">search</i>
+							<%= f.text_field :name %>
+							<label>Informe o nome ou parte dele</label>
+						</div>
+						<% end %>
+          			<% end %>
+				<div class="col s1"></div>
+			</div>
+		</div>
+		<table class="z-depth-1 round-corners highlight">
+			<thead>
+				<tr class="description">
+					<th>Nome</th>
+          <th>Instituição</th>
+          <th>Curso</th>
+          <th>Disciplina</th>
+          <th>Inscritos</th>
+					<th>Excluir</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @groups.each do |group| %>
+					<tr>
+						  <td><%= group.name %></td>
+              <td><%= group.institution.try(:name) %></td>
+              <td><%= group.course.try(:name) %></td>
+              <td><%= group.discipline.try(:name) %></td>
+						<td>
+              <i class="material-icons tiny" data-tooltip="Nº de Participantes">person</i> <%= group.subscriptions.size %> </span></td>
+						<td>
+							<%= link_to group, method: :delete, data: { target: 'confirm-modal' } do %>
+							<i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
+							<% end %>
+						</td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
+    	<%= paginate @groups %>
+	</main>
