--- a/app/views/disciplines/index.html.erb
+++ b/app/views/disciplines/index.html.erb
@@ -1,72 +1,69 @@
 <p id="notice"><%= notice %></p>
 
+<div class="row title left">
+  <div class="col s12">
+    Disciplinas
+  </div>
+</div>
+<div class="row description left">
+  <div class="col s12">
+    Administre todos as disciplinas cadastradas
+  </div>
+</div>
 
-		<div class="row title left">
-			<div class="col s12">
-				Disciplinas
-			</div>
-		</div>
-		<div class="row description left">
-			<div class="col s12">
-				Administre todos as disciplinas cadastradas
-			</div>
-		</div>
+<div class="section no-pad-bot" id="index-banner">
+  <div class="container">
+    <div class="row center">
+      <div class="col s12">
+        <%=image_tag 'undraw_studying_s3l7@3x', class: 'responsive-img custom-image' %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col s1"></div>
+    <%= form_tag disciplines_path, method: :GET do %>
+      <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+      <div class="input-field col s10 search-field">
+        <i class="material-icons prefix blue-text lighten-2">search</i>
+        <%= f.text_field :name %>
+        <label for='search_name'>Informe o nome ou parte dele</label>
+      </div>
+      <% end %>
+    <% end %>
+    <div class="col s1"></div>
+  </div>
+</div>
+<table class="z-depth-1 round-corners highlight">
+  <thead>
+    <tr class="description">
+      <th>Nome</th>
+      <th>Inscritos</th>
+      <th class="center">Ação</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @disciplines.each do |discipline| %>
+      <tr>
+        <td><%= discipline.name %></td>
+        <td><i class="material-icons tiny">person</i> <%= discipline.subscriptions.size %> </span></td>
+        <td class="center">
+          <%= link_to discipline, method: :delete, data: { target: 'confirm-modal' } do %>
+           <i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
+          <% end %>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+<%= paginate @disciplines %>
 
-		<div class="section no-pad-bot" id="index-banner">
-			<div class="container">
-				<div class="row center">
-					<div class="col s12">
-           <%=image_tag 'undraw_studying_s3l7@3x', class: 'responsive-img custom-image' %>
-          </div>
-				</div>
-			</div>
-		</div>
-    <div class="container">
-			<div class="row">
-				<div class="col s1"></div>
-				  	<%= form_tag disciplines_path, method: :GET do %>
-						<%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-						<div class="input-field col s10 search-field">
-							<i class="material-icons prefix blue-text lighten-2">search</i>
-							<%= f.text_field :name %>
-							<label>Informe o nome ou parte dele</label>
-						</div>
-						<% end %>
-          			<% end %>
-				<div class="col s1"></div>
-			</div>
-		</div>
-		<table class="z-depth-1 round-corners highlight">
-			<thead>
-				<tr class="description">
-					<th>Nome</th>
-           <th>Inscritos</th>
-					<th class="center">Ação</th>
-				</tr>
-			</thead>
-			<tbody>
-			  <% @disciplines.each do |discipline| %>
-            <tr>
-            	<td><%= discipline.name %></td>
-              <td><i class="material-icons tiny">person</i> <%= discipline.subscriptions.size %> </span></td>
-              <td class="center">
-                <%= link_to discipline, method: :delete, data: { target: 'confirm-modal' } do %>
-                  <i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
-                <% end %>           
-            </tr>
-        <% end %>			
-			</tbody>
-		</table>
-		  <%= paginate @disciplines %>
-	</main>
-	
-	<div id="confirm-modal" class="modal center valign-wrapper custom-modal">
-		<div class="modal-content">
-			<p>Excluir o curso selecionado?</p>
-		</div>
-		<div class="modal-footer">
-			<a href="#!" class="modal-close waves-effect waves-green btn-flat">Sim</a>
-			<a class="modal-close waves-effect waves-red btn-flat">Não</a>
-		</div>
-	</div>
-
+<div id="confirm-modal" class="modal center valign-wrapper custom-modal">
+  <div class="modal-content">
+    <p>Excluir o curso selecionado?</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sim</a>
+    <a class="modal-close waves-effect waves-red btn-flat">Não</a>
+  </div>
+</div>
