Migração Admin/Student + fixes

--- a/app/views/admins/edit.html.erb
+++ b/app/views/admins/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Admin</h1>
+<div class="row title left">
+	<div class="col s12">
+		Editando Administrador
+	</div>
+</div>
+<div class="row description left">
+	<div class="col s12">
+		Altere os dados do administrador
+	</div>
+</div>
 
 <%= render 'form', admin: @admin %>
-
-<%= link_to 'Show', @admin %> |
-<%= link_to 'Back', admins_path %>
