--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -1,5 +1,14 @@
-<h1>New Admin</h1>
+<div class="row title left">
+	<div class="col s12">
+		Adicionar Administrador
+	</div>
+</div>
+<div class="row description left">
+	<div class="col s12">
+		Preencha os dados do administrador
+	</div>
+</div>
+
+<div class="row"></div>
 
 <%= render 'form', admin: @admin %>
-
-<%= link_to 'Back', admins_path %>
