--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,12 @@
-<h1>New Student</h1>
+<div class="row title left">
+	<div class="col s12">
+		Novo Aluno
+	</div>
+</div>
+<div class="row description left">
+	<div class="col s12">
+		Preencha os dados do aluno
+	</div>
+</div>
 
 <%= render 'form', student: @student %>
-
-<%= link_to 'Back', students_path %>
