--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,38 +1,73 @@
-<p id="notice"><%= notice %></p>
+<div class="row title left">
+  <div class="col s12">
+    Administradores
+  </div>
+</div>
+<div class="row description left">
+  <div class="col s12">
+    Visualize todos os administradores do sistema
+  </div>
+</div>
+<div class="row"></div>
 
-<h1>Admins</h1>
+<%= link_to new_admin_path do %>
+<div class="waves-effect waves-blue blue accent-2 btn admin-button">
+  <i class="material-icons left">add</i>NOVO ADMINISTRADOR
+</div>
+<% end %> 
+<div class="row"></div>
 
-<%= form_tag admins_path, method: :GET do %>
-  <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-    <div class="field">
-      <%= f.label :search %>
+<div class="container">
+  <div class="row">
+    <div class="col s1"></div>
+    <%= form_tag admins_path, method: :GET do %>
+    <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+    <div class="input-field col s10 search-field">
+      <i class="material-icons prefix blue-text lighten-2">search</i>
       <%= f.text_field :name %>
+      <label>Informe o nome ou parte dele</label>
     </div>
-  <% end %>
-<% end %>
+    <% end %>
+    <% end %>
+    <div class="col s1"></div>
+  </div>
+</div>
 
-<table>
+<table class="z-depth-1 round-corners highlight">
   <thead>
-    <tr>
-      <th>Name</th>
+    <tr class="description">
+      <th>Nome</th>
       <th>Email</th>
-      <th colspan="3"></th>
+      <th class="center">Ações</th>
     </tr>
   </thead>
-
   <tbody>
     <% @admins.each do |admin| %>
-      <tr>
-        <td><%= admin.name %></td>
-        <td><%= admin.email %></td>
-        <td><%= link_to 'Show', admin %></td>
-        <td><%= link_to 'Edit', edit_admin_path(admin) %></td>
-        <td><%= link_to 'Destroy', admin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <tr>
+      <td><%= admin.name %></td>
+      <td><%= admin.email %></td>
+      <td class="center">
+        <%= link_to edit_admin_path(admin), method: :get do %>
+        <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom" data-tooltip="Alterar">edit</i>
+        <% end %>           
+        <a data-target="<%= admin.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
+        </a>
+      </td>         
+    </tr>
+    <div id="<%= admin.id %>" class="modal center valign-wrapper custom-modal">
+      <div class="modal-content">
+        <p>Excluir o administrador <%= admin.name %>?</p>
+      </div>
+      <div class="modal-footer">
+        <%= link_to admin, method: :delete do %>
+        <div class="modal-close waves-effect waves-green btn-flat">Sim</div>
+        <% end %>
+        <a class="modal-close waves-effect waves-red btn-flat">Não</a>
+      </div>
+    </div>
+    <% end %>        
   </tbody>
 </table>
-
 <%= paginate @admins %>
-
-<%= link_to 'New User', new_admin_path %>
+<div class="row"></div>
+<div class="row"></div>
