--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row title left">
   <div class="col s12">
     Cursos
@@ -24,13 +22,13 @@
   <div class="row">
     <div class="col s1"></div>
     <%= form_tag courses_path, method: :GET do %>
-      <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-      <div class="input-field col s10 search-field">
-        <i class="material-icons prefix blue-text lighten-2">search</i>
-        <%= f.text_field :name %>
-        <label for='search_name'>Informe o nome ou parte dele</label>
-      </div>
-      <% end %>
+    <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+    <div class="input-field col s10 search-field">
+      <i class="material-icons prefix blue-text lighten-2">search</i>
+      <%= f.text_field :name %>
+      <label for='search_name'>Informe o nome ou parte dele</label>
+    </div>
+    <% end %>
     <% end %>
     <div class="col s1"></div>
   </div>
@@ -45,25 +43,25 @@
   </thead>
   <tbody>
     <% @courses.each do |course| %>
-      <tr>
-        <td><%= course.name %></td>
-        <td><i class="material-icons tiny">person</i> <%= course.subscriptions.size %> </span></td>
-        <td class="center">
-          <%= link_to course, method: :delete, data: { target: 'confirm-modal' } do %>
-            <i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
-          <% end %>
-      </tr>
+    <tr>
+      <td><%= course.name %></td>
+      <td><i class="material-icons blue-text accent-1">person</i> <%= course.subscriptions.size %> </span></td>
+      <td class="center">
+        <a data-target="<%= course.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+      </td>
+    </tr>
+    <div id="<%= course.id %>" class="modal center valign-wrapper custom-modal">
+      <div class="modal-content">
+        <p>Excluir o curso <%= course.name %>?</p>
+      </div>
+      <div class="modal-footer">
+        <%= link_to course, method: :delete do %>
+        <div class="modal-close waves-effect waves-green btn-flat">Sim</div>
+        <% end %>
+        <a class="modal-close waves-effect waves-red btn-flat">Não</a>
+      </div>
+    </div>
     <% end %>
   </tbody>
 </table>
 <%= paginate @courses %>
-
-<div id="confirm-modal" class="modal center valign-wrapper custom-modal">
-  <div class="modal-content">
-    <p>Excluir o curso selecionado?</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sim</a>
-    <a class="modal-close waves-effect waves-red btn-flat">Não</a>
-  </div>
-</div>
