--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="row title left">
   <div class="col s12">
     Instituições
@@ -26,13 +24,13 @@
   <div class="row">
     <div class="col s1"></div>
     <%= form_tag institutions_path, method: :GET do %>
-      <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-      <div class="input-field col s10 search-field">
-        <i class="material-icons prefix blue-text lighten-2">search</i>
-        <%= f.text_field :name %>
-        <label for='search_name'>Informe o nome ou parte dele</label>
-      </div>
-      <% end %>
+    <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+    <div class="input-field col s10 search-field">
+      <i class="material-icons prefix blue-text lighten-2">search</i>
+      <%= f.text_field :name %>
+      <label for='search_name'>Informe o nome ou parte dele</label>
+    </div>
+    <% end %>
     <% end %>
     <div class="col s1"></div>
   </div>
@@ -48,42 +46,25 @@
   </thead>
   <tbody>
     <% @institutions.each do |institution| %>
-      <tr>
-        <td><%= institution.name %></td>
-        <td><i class="material-icons tiny">person</i> <%= institution.subscriptions.size %> </span></td>
-        <td>
-          <%= link_to institution, method: :delete, data: { target: 'confirm-modal' } do %>
-            <i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
-          <% end %>
-        </td>
-      </tr>
+    <tr>
+      <td><%= institution.name %></td>
+      <td><i class="material-icons blue-text accent-1">group</i> <%= institution.subscriptions.size %> </span></td>
+      <td>
+        <a data-target="<%= institution.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+      </td>
+    </tr>
+    <div id="<%= institution.id %>" class="modal center valign-wrapper custom-modal">
+      <div class="modal-content">
+        <p>Excluir a instituição <%= institution.name %>?</p>
+      </div>
+      <div class="modal-footer">
+        <%= link_to institution, method: :delete do %>
+        <div class="modal-close waves-effect waves-green btn-flat">Sim</div>
+        <% end %>
+        <a class="modal-close waves-effect waves-red btn-flat">Não</a>
+      </div>
+    </div>
     <% end %>
   </tbody>
 </table>
 <%= paginate @institutions %>
-
-<div id="confirm-modal" class="modal center valign-wrapper custom-modal">
-  <div class="modal-content">
-    <p>Excluir a instituição selecionada?</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-close waves-effect waves-green btn-flat">Sim</a>
-    <a class="modal-close waves-effect waves-red btn-flat">Não</a>
-  </div>
-</div>
-
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-<script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-
-<script type="text/javascript">
-  $(document).ready(function () {
-    $('.sidenav').sidenav();
-  });
-  $(document).ready(function () {
-    $('.tooltipped').tooltip();
-  });
-  $(document).ready(function () {
-    $('.modal').modal();
-  });
-</script>
