--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Orion</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Orion</title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all' %>
-    <%= stylesheet_link_tag 'custom/materialize.min.css' %>
-    <%= stylesheet_link_tag 'custom/template.css' %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= stylesheet_link_tag 'custom/materialize.min.css' %>
+  <%= stylesheet_link_tag 'custom/template.css' %>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap">
 
-    <%= javascript_include_tag 'application' %>
-  </head>
+  <%= javascript_include_tag 'application' %>
+</head>
 
-  <body>
-    <%= render 'layouts/logout_header' %>
-    <%= render 'layouts/menu_bar' %>
+<body>
+  <%= render 'layouts/logout_header' %>
+  <%= render 'layouts/menu_bar' %>
 
-  	<main class="container custom-container">
-      <%= yield %>
-    </main>
-  </body>
+  <main class="container custom-container">
+    <%= yield %>
+  </main>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      $('.sidenav').sidenav();
+    });
+    $(document).ready(function(){
+      $('.tooltipped').tooltip();
+    });
+    $(document).ready(function(){
+      $('.modal').modal();
+    });
+    window.onload = function() {
+      <% if notice != nil %>
+      M.toast({html: '<%= notice %>'});
+      <% end %>
+    }
+  </script>
+</body>
 </html>
