--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Student</h1>
+<div class="row title left">
+	<div class="col s12">
+		Editando Aluno
+	</div>
+</div>
+<div class="row description left">
+	<div class="col s12">
+		Preencha os dados do aluno
+	</div>
+</div>
 
 <%= render 'form', student: @student %>
-
-<%= link_to 'Show', @student %> |
-<%= link_to 'Back', students_path %>
