--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,38 +1,72 @@
-<p id="notice"><%= notice %></p>
+<div class="row title left">
+  <div class="col s12">
+    Alunos
+  </div>
+</div>
+<div class="row description left">
+  <div class="col s12">
+    Administre todos os alunos cadastrados
+  </div>
+</div>
+<div class="row"></div>
 
-<h1>Students</h1>
+<%= link_to new_student_path do %>
+<div class="waves-effect waves-blue blue accent-2 btn admin-button">
+  <i class="material-icons left">add</i>NOVO ALUNO
+</div>
+<% end %> 
+<div class="row"></div>
 
-<%= form_tag students_path, method: :GET do %>
-  <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-    <div class="field">
-      <%= f.label :search %>
+<div class="container">
+  <div class="row">
+    <div class="col s1"></div>
+    <%= form_tag students_path, method: :GET do %>
+    <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+    <div class="input-field col s10 search-field">
+      <i class="material-icons prefix blue-text lighten-2">search</i>
       <%= f.text_field :name %>
+      <label>Informe o nome ou parte dele</label>
     </div>
-  <% end %>
-<% end %>
-
-<table>
+    <% end %>
+    <% end %>
+    <div class="col s1"></div>
+  </div>
+</div>
+<table class="z-depth-1 round-corners highlight">
   <thead>
-    <tr>
-      <th>Name</th>
+    <tr class="description">
+      <th>Nome</th>
       <th>Email</th>
-      <th colspan="3"></th>
+      <th class="center">Ações</th>
     </tr>
   </thead>
-
   <tbody>
     <% @students.each do |student| %>
-      <tr>
-        <td><%= student.name %></td>
-        <td><%= student.email %></td>
-        <td><%= link_to 'Show', student %></td>
-        <td><%= link_to 'Edit', edit_student_path(student) %></td>
-        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+    <tr>
+      <td><%= student.name %></td>
+      <td><%= student.email %></td>
+      <td class="center">
+        <%= link_to student do %>
+        <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom" data-tooltip="Visualizar">remove_red_eye</i>
+        <% end %>
+        <%= link_to edit_student_path(student), method: :get do %>
+        <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom" data-tooltip="Alterar">edit</i>
+        <% end %>
+        <a data-target="<%= student.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+      </td>
+    </tr>
+    <div id="<%= student.id %>" class="modal center valign-wrapper custom-modal">
+      <div class="modal-content">
+        <p>Excluir definitivamente o aluno <%= student.name %>?</p>
+      </div>
+      <div class="modal-footer">
+        <%= link_to student, method: :delete do %>
+        <div class="modal-close waves-effect waves-green btn-flat">Sim</div>
+        <% end %>
+        <a class="modal-close waves-effect waves-red btn-flat">Não</a>
+      </div>
+    </div>
+    <% end %>     
   </tbody>
 </table>
-
 <%= paginate @students %>
-
-<%= link_to 'New User', new_student_path %>
