--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col s12 m12 l5 fill">
 		<div class="container center c1">
-			<h2>LOGO</h2>
+			<%=image_tag 'logo3', class: 'responsive-img custom-image' %>
 			<p class="description">Recupere sua senha</p>
 			<div class="row"></div>
 			<div class="row"></div>
@@ -22,7 +22,7 @@
 	<div class="col l7 hide-on-med-and-down blue theme fill valign-wrapper">
 		<div class="container c2">
 			<div class="row center">
-				<h4 class="white-text">LOGO</h4>
+				<%=image_tag 'logo', class: 'responsive-img custom-image logo-size' %>
 				<h5 class="white-text">Junte-se aos seus colegas</h5>
 			</div>
 			<div class="row center">
