--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -1,7 +1,7 @@
 <ul id="slide-out" class="sidenav sidenav-fixed blue theme white-text">
   <li>
     <div class="user-view center">
-      <h2>LOGO</h2>
+      <%=image_tag 'logo', class: 'responsive-img custom-image logo-size' %>
     </div>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('home') %>">
