--- a/app/assets/stylesheets/custom/login.css
+++ b/app/assets/stylesheets/custom/login.css
@@ -49,3 +49,8 @@ h4,h5 {
   color: #768dfc;
   font-family: "Open Sans", sans-serif;
 }
+
+.logo-size {
+  height: 50%!important;
+  width:  50%!important;
+}
