Add admin actions

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Welcome to orion admin!</h1>
+<div class="row title left">
+  <div class="col s12">
+    Boas-vindas ao painel administrativo!
+  </div>
+</div>
