--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -7,22 +7,22 @@
   <li class="nav-item z-depth-1 right <%= active_tab_class('home') %>">
     <%= link_to 'Home', home_index_path, class: 'white-text' %>
   </li>
-  <li class="nav-item z-depth-1 right <%= active_tab_class('admins') %>">
-    <%= link_to 'Admins', admins_path, class: 'white-text' %>
-  </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('institutions') %>">
-    <%= link_to 'Institutions', institutions_path, class: 'white-text' %>
+    <%= link_to 'Instituições', institutions_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('courses') %>">
-    <%= link_to 'Courses', courses_path, class: 'white-text' %>
+    <%= link_to 'Cursos', courses_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('disciplines') %>">
-    <%= link_to 'Disciplines', disciplines_path, class: 'white-text' %>
+    <%= link_to 'Disciplinas', disciplines_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('groups') %>">
-    <%= link_to 'Groups', groups_path, class: 'white-text' %>
+    <%= link_to 'Grupos', groups_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('students') %>">
-    <%= link_to 'Users', students_path, class: 'white-text' %>
+    <%= link_to 'Usuários', students_path, class: 'white-text' %>
+  </li>
+  <li class="nav-item z-depth-1 right <%= active_tab_class('admins') %>">
+    <%= link_to 'Administradores', admins_path, class: 'white-text' %>
   </li>
 </ul>
