--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 <div class="row description left">
   <div class="col s12">
-    Visualize todos os administradores do sistema
+    Administre todos os administradores do sistema
   </div>
 </div>
 <div class="row"></div>
@@ -14,7 +14,7 @@
 <div class="waves-effect waves-blue blue accent-2 btn admin-button">
   <i class="material-icons left">add</i>NOVO ADMINISTRADOR
 </div>
-<% end %> 
+<% end %>
 <div class="row"></div>
 
 <div class="container">
@@ -49,10 +49,10 @@
       <td class="center">
         <%= link_to edit_admin_path(admin), method: :get do %>
         <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom" data-tooltip="Alterar">edit</i>
-        <% end %>           
+        <% end %>
         <a data-target="<%= admin.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i>
         </a>
-      </td>         
+      </td>
     </tr>
     <div id="<%= admin.id %>" class="modal center valign-wrapper custom-modal">
       <div class="modal-content">
@@ -65,7 +65,7 @@
         <a class="modal-close waves-effect waves-red btn-flat">Não</a>
       </div>
     </div>
-    <% end %>        
+    <% end %>
   </tbody>
 </table>
 <%= paginate @admins %>
