Improve filter usability
- Removes  unecessary button to ban user

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -25,7 +25,7 @@
     <div class="input-field col s10 search-field">
       <i class="material-icons prefix blue-text lighten-2">search</i>
       <%= f.text_field :name %>
-      <label>Informe o nome ou parte dele</label>
+      <label for='search_name'>Informe o nome ou parte dele</label>
     </div>
     <% end %>
     <% end %>
