--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row title left">
 	<div class="col s12">
-		Editando Aluno
+		Editando Estudante
 	</div>
 </div>
 <div class="row description left">
