--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,11 +1,11 @@
 <div class="row title left">
   <div class="col s12">
-    Alunos
+    Estudantes
   </div>
 </div>
 <div class="row description left">
   <div class="col s12">
-    Administre todos os alunos cadastrados
+    Administre todos os estudantes cadastrados
   </div>
 </div>
 <div class="row"></div>
@@ -25,7 +25,7 @@
       <div class="input-field col s10 search-field">
         <i class="material-icons prefix blue-text lighten-2">search</i>
         <%= f.text_field :name %>
-        <label>Informe o nome ou parte dele</label>
+        <label for='search_name'>Informe o nome ou parte dele</label>
       </div>
       <% end %>
     <% end %>
