--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row title left">
 	<div class="col s12">
-		Novo Aluno
+		Novo Estudante
 	</div>
 </div>
 <div class="row description left">
