--- a/app/views/layouts/_menu_bar.html.erb
+++ b/app/views/layouts/_menu_bar.html.erb
@@ -20,7 +20,7 @@
     <%= link_to 'Grupos', groups_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('students') %>">
-    <%= link_to 'Usuários', students_path, class: 'white-text' %>
+    <%= link_to 'Estudantes', students_path, class: 'white-text' %>
   </li>
   <li class="nav-item z-depth-1 right <%= active_tab_class('admins') %>">
     <%= link_to 'Administradores', admins_path, class: 'white-text' %>
