--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -6,7 +6,7 @@
   <ul>
     <% student.errors.full_messages.each do |message| %>
     <li class="chip error-chip">
-      <%= message %>
+      "Email já cadastrado!"
       <i class="close material-icons">close</i>
     </li>
     <% end %>
