--- a/app/assets/stylesheets/custom/template.css
+++ b/app/assets/stylesheets/custom/template.css
@@ -191,3 +191,12 @@ table.highlight > tbody > tr:hover {
   height: 80%!important;
   width:  80%!important;
 }
+
+.toast {
+  background-color: #768dfc!important;
+  color: white!important;
+  border-radius: 6px!important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-weight: bold!important;
+}
