--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -45,9 +45,12 @@
     <% @courses.each do |course| %>
     <tr>
       <td><%= course.name %></td>
-      <td><i class="material-icons blue-text accent-1">person</i> <%= course.subscriptions.size %> </span></td>
+      <td><i class="material-icons blue-text accent-1">group</i> <%= course.subscriptions.size %> </span></td>
       <td class="center">
-        <a data-target="<%= course.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+        <div class="waves-effect waves-red red accent-2 btn admin-button">
+          <a data-target="<%= course.id %>" class="modal-trigger white-text"><i class="material-icons left white-text">delete</i>Excluir
+          </a>
+        </div>
       </td>
     </tr>
     <div id="<%= course.id %>" class="modal center valign-wrapper custom-modal">
