--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -39,7 +39,7 @@
     <tr class="description">
       <th>Nome</th>
       <th class="center">Informações</th>
-      <th class="center">Excluir</th>
+      <th class="center">Ação</th>
     </tr>
   </thead>
   <tbody>
@@ -50,7 +50,10 @@
         <a data-target="<%= group.id %>info" class="modal-trigger hand-cursor"><i class="material-icons blue-text accent-2 tooltipped" data-position="bottom" data-tooltip="Clique para mais">info</i></a>
       </td>
       <td class="center">
-        <a data-target="<%= group.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+        <div class="waves-effect waves-red red accent-2 btn admin-button">
+          <a data-target="<%= group.id %>" class="modal-trigger white-text"><i class="material-icons left white-text">delete</i>Excluir
+          </a>
+        </div>
       </td>
     </tr>
     <div id="<%= group.id %>" class="modal center valign-wrapper custom-modal">
