--- a/app/views/institutions/index.html.erb
+++ b/app/views/institutions/index.html.erb
@@ -41,7 +41,7 @@
     <tr class="description">
       <th>Nome</th>
       <th>Inscritos</th>
-      <th>Excluir</th>
+      <th class="center">Excluir</th>
     </tr>
   </thead>
   <tbody>
@@ -49,8 +49,11 @@
     <tr>
       <td><%= institution.name %></td>
       <td><i class="material-icons blue-text accent-1">group</i> <%= institution.subscriptions.size %> </span></td>
-      <td>
-        <a data-target="<%= institution.id %>" class="modal-trigger hand-cursor"><i class="material-icons red-text accent-1 tooltipped" data-position="bottom" data-tooltip="Excluir">delete</i></a>
+      <td class="center">
+        <div class="waves-effect waves-red red accent-2 btn admin-button">
+          <a data-target="<%= institution.id %>" class="modal-trigger white-text"><i class="material-icons left white-text">delete</i>Excluir
+          </a>
+        </div>
       </td>
     </tr>
     <div id="<%= institution.id %>" class="modal center valign-wrapper custom-modal">
