--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -12,7 +12,7 @@
 
 <%= link_to new_student_path do %>
 <div class="waves-effect waves-blue blue accent-2 btn admin-button">
-  <i class="material-icons left">add</i>NOVO ALUNO
+  <i class="material-icons left">add</i>NOVO ESTUDANTE
 </div>
 <% end %>
 <div class="row"></div>
@@ -21,13 +21,13 @@
   <div class="row">
     <div class="col s1"></div>
     <%= form_tag students_path, method: :GET do %>
-      <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
-      <div class="input-field col s10 search-field">
-        <i class="material-icons prefix blue-text lighten-2">search</i>
-        <%= f.text_field :name %>
-        <label for='search_name'>Informe o nome ou parte dele</label>
-      </div>
-      <% end %>
+    <%= fields_for :search, OpenStruct.new(params[:search]) do |f| %>
+    <div class="input-field col s10 search-field">
+      <i class="material-icons prefix blue-text lighten-2">search</i>
+      <%= f.text_field :name %>
+      <label for='search_name'>Informe o nome ou parte dele</label>
+    </div>
+    <% end %>
     <% end %>
     <div class="col s1"></div>
   </div>
@@ -47,15 +47,19 @@
       <td><%= student.email %></td>
       <td class="center">
         <%= link_to student do %>
-        <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom"
-          data-tooltip="Visualizar">remove_red_eye</i>
+        <div class="waves-effect waves-green green accent-2 btn admin-button">
+          <i class="material-icons left">remove_red_eye</i>Visualizar
+        </div>
         <% end %>
         <%= link_to edit_student_path(student), method: :get do %>
-        <i class="material-icons blue-text accent-1 tooltipped" data-position="bottom" data-tooltip="Alterar">edit</i>
+        <div class="waves-effect waves-blue blue accent-2 btn admin-button">
+          <i class="material-icons left">edit</i>Alterar
+        </div>
         <% end %>
-        <a data-target="<%= student.id %>" class="modal-trigger hand-cursor"><i
-            class="material-icons red-text accent-1 tooltipped" data-position="bottom"
-            data-tooltip="Excluir">delete</i></a>
+        <div class="waves-effect waves-red red accent-2 btn admin-button">
+          <a data-target="<%= student.id %>" class="modal-trigger white-text"><i class="material-icons left white-text">delete</i>Excluir
+          </a>
+        </div>
       </td>
     </tr>
     <div id="<%= student.id %>" class="modal center valign-wrapper custom-modal">
